feat: add base example

--- a/div-as-button/fake-button.html
+++ b/div-as-button/fake-button.html
@@ -43,7 +43,7 @@
     <div class="container">
       <h2>Fake button</h2>
 
-      <div id="button">Click me if you can!</div>
+      <div id="button">Click me!</div>
     </div>
 
 
