fix: fix routing, add README.md

--- a/example-1/accessible-surf-store.html
+++ b/example-1/accessible-surf-store.html
@@ -175,7 +175,7 @@
         <button id="buy-button" class="button">Comprar</button>
 
         <audio id="audio">
-          <source src="./obrigado.mp3" type="audio/mpeg">
+          <source src="./thank-you.mp3" type="audio/mpeg">
         </audio>
       </div>
 
