--- a/example-1/not-accessible-surf-store.html
+++ b/example-1/not-accessible-surf-store.html
@@ -167,7 +167,7 @@
         <div id="buy-button" class="button">Comprar</div>
 
         <audio id="audio">
-          <source src="./obrigado.mp3" type="audio/mpeg">
+          <source src="./thank-you.mp3" type="audio/mpeg">
         </audio>
       </div>
 
