--- a/example-2/accessible-button.html
+++ b/example-2/accessible-button.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Fake button</title>
+    <title>Accessible Button</title>
     <style>
       * {
         box-sizing: border-box;
@@ -41,12 +41,10 @@
 
   <body>
     <div class="container">
-      <h2>Fake button</h2>
+      <h2>Accessible Button</h2>
 
-      <div id="button">Click me!</div>
+      <button id="button">Click me!</button>
     </div>
-
-
   </body>
 
   <script>
