--- a/example-2/div-accessible-button.html
+++ b/example-2/div-accessible-button.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Fake button accessible</title>
+    <title>DIV Accessible Button</title>
     <style>
       * {
         box-sizing: border-box;
@@ -41,7 +41,7 @@
 
   <body>
     <div class="container">
-      <h2>Fake button accessible</h2>
+      <h2>DIV Accessible Button</h2>
 
       <div
         id="button"
@@ -51,8 +51,6 @@
         Click me!
       </div>
     </div>
-
-
   </body>
 
   <script>
